[gd_scene load_steps=2 format=3 uid="uid://67v0l5b80pyb"]

[ext_resource type="Script" path="res://Scenes/upgrade_box.gd" id="1_mu4qk"]

[node name="upgrade_box" type="HBoxContainer"]
script = ExtResource("1_mu4qk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="name_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Firing Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_bar" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
columns = 10

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect5" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect6" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect7" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect8" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect9" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="ColorRect10" type="ColorRect" parent="VBoxContainer/upgrade_bar"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Upgrade"
horizontal_alignment = 1

[node name="upgrade_cost" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "cost"
horizontal_alignment = 1

[node name="upgrade_button" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "+"

[connection signal="button_up" from="VBoxContainer2/upgrade_button" to="." method="_on_upgrade_button_button_up"]
